--- a/SwampAttack/Resources/image/Daoju5.plist
+++ b/SwampAttack/Resources/image/Daoju5.plist
@@ -7,197 +7,184 @@
             <key>daoju50001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{362,2},{76,124}}</string>
+                <string>{{306,494},{196,258}}</string>
                 <key>offset</key>
-                <string>{1,1}</string>
+                <string>{-3,-3}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{23,7},{76,124}}</string>
+                <string>{{74,24},{196,258}}</string>
                 <key>sourceSize</key>
-                <string>{120,140}</string>
+                <string>{350,300}</string>
             </dict>
             <key>daoju50002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,94},{74,116}}</string>
+                <string>{{784,640},{180,230}}</string>
                 <key>offset</key>
-                <string>{-1,-2}</string>
+                <string>{5,-16}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{22,14},{74,116}}</string>
+                <string>{{90,51},{180,230}}</string>
                 <key>sourceSize</key>
-                <string>{120,140}</string>
+                <string>{350,300}</string>
             </dict>
             <key>daoju50003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{82,278},{78,104}}</string>
+                <string>{{784,452},{186,230}}</string>
                 <key>offset</key>
-                <string>{-2,-8}</string>
+                <string>{2,-15}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{19,26},{78,104}}</string>
+                <string>{{84,50},{186,230}}</string>
                 <key>sourceSize</key>
-                <string>{120,140}</string>
+                <string>{350,300}</string>
             </dict>
             <key>daoju50004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{82,384},{74,104}}</string>
+                <string>{{566,494},{190,216}}</string>
                 <key>offset</key>
-                <string>{-1,-7}</string>
+                <string>{1,-23}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{22,25},{74,104}}</string>
+                <string>{{81,65},{190,216}}</string>
                 <key>sourceSize</key>
-                <string>{120,140}</string>
+                <string>{350,300}</string>
             </dict>
             <key>daoju50005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{82,170},{78,106}}</string>
+                <string>{{480,692},{188,232}}</string>
                 <key>offset</key>
-                <string>{-1,-6}</string>
+                <string>{1,-11}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{20,23},{78,106}}</string>
+                <string>{{82,45},{188,232}}</string>
                 <key>sourceSize</key>
-                <string>{120,140}</string>
-            </dict>
-            <key>daoju50006.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{162,168},{78,100}}</string>
-                <key>offset</key>
-                <string>{-1,-9}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{20,29},{78,100}}</string>
-                <key>sourceSize</key>
-                <string>{120,140}</string>
-            </dict>
-            <key>daoju50007.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{158,384},{78,100}}</string>
-                <key>offset</key>
-                <string>{1,-9}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{22,29},{78,100}}</string>
-                <key>sourceSize</key>
-                <string>{120,140}</string>
-            </dict>
-            <key>daoju50008.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,400},{78,108}}</string>
-                <key>offset</key>
-                <string>{2,-5}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{23,21},{78,108}}</string>
-                <key>sourceSize</key>
-                <string>{120,140}</string>
-            </dict>
-            <key>daoju50009.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,286},{78,112}}</string>
-                <key>offset</key>
-                <string>{3,-3}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{24,17},{78,112}}</string>
-                <key>sourceSize</key>
-                <string>{120,140}</string>
-            </dict>
-            <key>daoju50010.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,170},{78,114}}</string>
-                <key>offset</key>
-                <string>{2,-2}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{23,15},{78,114}}</string>
-                <key>sourceSize</key>
-                <string>{120,140}</string>
+                <string>{350,300}</string>
             </dict>
             <key>stones0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{162,270},{72,78}}</string>
+                <string>{{2,700},{292,258}}</string>
                 <key>offset</key>
-                <string>{5,0}</string>
+                <string>{-1,-3}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{69,31},{72,78}}</string>
+                <string>{{28,24},{292,258}}</string>
                 <key>sourceSize</key>
-                <string>{200,140}</string>
+                <string>{350,300}</string>
             </dict>
             <key>stones0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{362,80},{120,86}}</string>
+                <string>{{2,468},{302,230}}</string>
                 <key>offset</key>
-                <string>{4,12}</string>
+                <string>{-1,-19}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{44,15},{120,86}}</string>
+                <string>{{23,54},{302,230}}</string>
                 <key>sourceSize</key>
-                <string>{200,140}</string>
+                <string>{350,300}</string>
             </dict>
             <key>stones0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{182,90}}</string>
+                <string>{{324,262},{302,230}}</string>
                 <key>offset</key>
-                <string>{0,24}</string>
+                <string>{0,-16}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{9,1},{182,90}}</string>
+                <string>{{24,51},{302,230}}</string>
                 <key>sourceSize</key>
-                <string>{200,140}</string>
+                <string>{350,300}</string>
             </dict>
             <key>stones0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{186,2},{174,80}}</string>
+                <string>{{664,234},{310,216}}</string>
                 <key>offset</key>
-                <string>{2,1}</string>
+                <string>{0,-26}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{15,29},{174,80}}</string>
+                <string>{{20,68},{310,216}}</string>
                 <key>sourceSize</key>
-                <string>{200,140}</string>
+                <string>{350,300}</string>
             </dict>
             <key>stones0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{186,84},{168,82}}</string>
+                <string>{{2,234},{320,232}}</string>
                 <key>offset</key>
-                <string>{3,-16}</string>
+                <string>{0,-12}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{19,45},{168,82}}</string>
+                <string>{{15,46},{320,232}}</string>
                 <key>sourceSize</key>
-                <string>{200,140}</string>
+                <string>{350,300}</string>
+            </dict>
+            <key>stones0006.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{338,2},{324,258}}</string>
+                <key>offset</key>
+                <string>{0,-8}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{13,29},{324,258}}</string>
+                <key>sourceSize</key>
+                <string>{350,300}</string>
+            </dict>
+            <key>stones0007.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,2},{334,230}}</string>
+                <key>offset</key>
+                <string>{1,-16}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{9,51},{334,230}}</string>
+                <key>sourceSize</key>
+                <string>{350,300}</string>
+            </dict>
+            <key>stones0008.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{664,2},{316,230}}</string>
+                <key>offset</key>
+                <string>{-2,-15}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{15,50},{316,230}}</string>
+                <key>sourceSize</key>
+                <string>{350,300}</string>
+            </dict>
+            <key>stones0009.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{262,700},{268,216}}</string>
+                <key>offset</key>
+                <string>{-3,-23}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{38,65},{268,216}}</string>
+                <key>sourceSize</key>
+                <string>{350,300}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -207,9 +194,9 @@
             <key>realTextureFileName</key>
             <string>Daoju5.png</string>
             <key>size</key>
-            <string>{512,512}</string>
+            <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:2817042bc43cb0a77b726a13d8863bbd:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:ed6ff5279957d95de875e4ced4eb4dce:1/1$</string>
             <key>textureFileName</key>
             <string>Daoju5.png</string>
         </dict>
