--- a/SwampAttack/proj.ios_mac/ios/Info.plist
+++ b/SwampAttack/proj.ios_mac/ios/Info.plist
@@ -42,7 +42,7 @@
 		<string>Icon-144.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.cocos2dx.swampattack</string>
+	<string>com.game.swampattack</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
