--- a/SwampAttack/proj.ios_mac/ios/Info.plist
+++ b/SwampAttack/proj.ios_mac/ios/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>Icon-57.png</string>
+	<string>Icon.png</string>
 	<key>CFBundleIconFiles</key>
 	<array>
 		<string>Icon-29</string>
@@ -17,26 +17,6 @@
 		<string>Icon-58</string>
 		<string>Icon-120</string>
 		<string>Icon.png</string>
-		<string>Icon@2x.png</string>
-		<string>Icon-57.png</string>
-		<string>Icon-114.png</string>
-		<string>Icon-72.png</string>
-		<string>Icon-144.png</string>
-	</array>
-	<key>CFBundleIconFiles~ipad</key>
-	<array>
-		<string>Icon-29</string>
-		<string>Icon-50</string>
-		<string>Icon-58</string>
-		<string>Icon-80</string>
-		<string>Icon-40</string>
-		<string>Icon-100</string>
-		<string>Icon-152</string>
-		<string>Icon-76</string>
-		<string>Icon-120</string>
-		<string>Icon.png</string>
-		<string>Icon@2x.png</string>
-		<string>Icon-57.png</string>
 		<string>Icon-114.png</string>
 		<string>Icon-72.png</string>
 		<string>Icon-144.png</string>
@@ -50,7 +30,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string></string>
+	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
